# brello-devin

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  ISSUES_AND_SOLUTIONS.md  alembic.ini  check_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ebac69c08913_add_email_confirmation_fields_to_user_.py  fe711c5c81b9_add_board_sharing_association_table.py
backend/app/: main.py
backend/app/auth/: jwt.py
backend/app/models/: __init__.py  board.py  list.py  task.py  user.py
backend/app/routes/: auth.py  boards.py  lists.py  tasks.py
backend/backend/: app.py
backend/brello_api/: pyproject.toml
backend/brello_api/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  config.js
frontend/src/components/: BoardManagement.js  BoardSharingModal.js  BoardsPage.js  ChakraTest.js  EmailConfirmation.js  EmailConfirmationPage.js  LandingPage.js  LoginPage.js  SignupPage.js
